[gd_scene load_steps=11 format=2]

[ext_resource path="res://Menu/Buttons/MultiplayerButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://Menu/Buttons/SingleplayerButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/art/pomobyte-minigames.png" type="Texture" id=3]
[ext_resource path="res://Menu/Buttons/GameSettingsButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://Menu/fade_in.tscn" type="PackedScene" id=5]
[ext_resource path="res://Menu/MenuScreen.gd" type="Script" id=6]
[ext_resource path="res://Menu/fade_out.tscn" type="PackedScene" id=7]
[ext_resource path="res://authenticate_user/Authenticate_User.tscn" type="PackedScene" id=8]
[ext_resource path="res://ui_elements/Pomo_BG.tscn" type="PackedScene" id=9]
[ext_resource path="res://assets/icons/volume_off.png" type="Texture" id=10]

[node name="MenuScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lobby_Scene_BG" parent="." instance=ExtResource( 9 )]

[node name="SoundOffButton" type="Button" parent="."]
margin_left = 1855.0
margin_top = 26.0
margin_right = 1891.0
margin_bottom = 56.0
action_mode = 0
icon = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuContainer" type="VBoxContainer" parent="."]
margin_left = 126.735
margin_top = 68.571
margin_right = 1806.73
margin_bottom = 851.571
custom_constants/separation = 50

[node name="Logo" type="TextureRect" parent="MenuContainer"]
margin_right = 1679.0
margin_bottom = 238.0
texture = ExtResource( 3 )
stretch_mode = 4

[node name="MenuButtons" type="VBoxContainer" parent="MenuContainer"]
visible = false
margin_top = 288.0
margin_right = 1679.0
margin_bottom = 783.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 60
alignment = 1

[node name="SingleplayerButton" parent="MenuContainer/MenuButtons" instance=ExtResource( 2 )]
margin_right = 1679.0
margin_bottom = 125.0
rect_min_size = Vector2( 0, 125 )

[node name="MultiplayerButton" parent="MenuContainer/MenuButtons" instance=ExtResource( 1 )]
margin_top = 185.0
margin_right = 1679.0
margin_bottom = 310.0
rect_min_size = Vector2( 0, 125 )
scene_to_load = "res://multiplayer_engine/Multiplayer_Engine.tscn"

[node name="GameSettingsButton" parent="MenuContainer/MenuButtons" instance=ExtResource( 4 )]
margin_top = 370.0
margin_right = 1679.0
margin_bottom = 495.0
rect_min_size = Vector2( 0, 125 )

[node name="Authenticate_User" parent="MenuContainer" instance=ExtResource( 8 )]

[node name="FadeIn" parent="." instance=ExtResource( 5 )]
visible = false
color = Color( 0, 0, 0, 1 )

[node name="FadeOut" parent="." instance=ExtResource( 7 )]
visible = false
color = Color( 0, 0, 0, 0 )

[node name="MusicStartTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="pressed" from="SoundOffButton" to="." method="_on_SoundOffButton_pressed"]
[connection signal="fade_in_finished" from="FadeIn" to="." method="_on_FadeIn_fade_in_finished"]
[connection signal="fade_out_finished" from="FadeOut" to="." method="_on_FadeOut_fade_out_finished"]
[connection signal="timeout" from="MusicStartTimer" to="." method="_on_MusicStartTimer_timeout"]
